@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 1718 RMD160 8e719c7570323cef85e52a74eed3b4e34d6e9a00 SHA1 3c8d805782899acb67c90e0f2d69bb926b7e62cd SHA256 787f3409e24d26bec8b592531780a72d8e4f477847926907379a526f5a96f51b
-EBUILD midori-9999.ebuild 1705 RMD160 84b9fc7e0557309e48ff4391b53b0443cdc83825 SHA1 2c5f2d19428060eee0dafc8c3fb4d434da9fcfce SHA256 1b2f78cfbf3d32fffb22de970c95e0248be876873f0962d635178e00370ed8be
-MISC ChangeLog 1169 RMD160 0733ba85717e8283c6991b6f6abc7cc52bf1920e SHA1 e2ad8bd151474177d157daa4a41d3ae2c81ad2b6 SHA256 1e03ccf724c56aa6ece80fcbb5c19c9c18d686b9bdbe50303325981a3cd8194f
+EBUILD midori-0.1.1.ebuild 1765 RMD160 8c168ba0b18eb3cf479911c33f138bccb341f0a2 SHA1 c605e182a7cdb99e6457f93c1cf1e9445a05f511 SHA256 9e5c2de91b9ed002df02c86f576f6c358a0b0ac392d35315de12d4afa13bed84
+EBUILD midori-9999.ebuild 1749 RMD160 ef42b199b4364de03f7f32d0660b26777811fd5f SHA1 b7deb7a4afa778d01fa534bbb6da088d207b5c0d SHA256 0a98a338b4a2c5211c7b052afdcc2123e0a81334e86793da227b62d3f574231e
+MISC ChangeLog 1334 RMD160 4447cca3a125a7a5894946717f840beaac63684e SHA1 75bfa7a98abeff64bb68781639c76f8bb6f25167 SHA256 dfae5f5b3b995069f9b72e41e98bfc2e6f5c8408ef4e70a13a41ae59befee5d4
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk9FlMACgkQKhnDs22gwa8lyACfTRiWwvfDMAqJahygS2WJxYJN
-2ZEAnisLUxiKmZThzwzTzQWywmaNyggZ
-=s34l
+iEYEARECAAYFAkk9GOUACgkQKhnDs22gwa8ZlQCfZN9/ZMFCXk4hU8qE/80sUvIh
+Yf0AoMsPN3TqkFZJWErfa9B0DKzg5cci
+=tz8v
 -----END PGP SIGNATURE-----
