@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
+  midori-9999.ebuild:
+  Added desktop file for 0.1.1 and added -lgthread-2.0 hack for 9999
+
   08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild:
   Append -lgthread-2.0 to fix compilation with forced --as-needed
 
